--- a/pages/AddEmployee.html
+++ b/pages/AddEmployee.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap" rel="stylesheet">
         <link href="../css/Form.css" rel="stylesheet">
+        <script defer src="../js/Form.js"></script>
         <title>Employee Payroll Form</title>
     </head>
     <body>
