--- a/pages/AddEmployee.html
+++ b/pages/AddEmployee.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap" rel="stylesheet">
         <link href="../css/Form.css" rel="stylesheet">
+        <script defer src="../js/EmpPayrollData.js"></script>
         <script defer src="../js/Form.js"></script>
         <title>Employee Payroll Form</title>
     </head>
@@ -19,11 +20,12 @@
             </div>
         </header>
         <div class="form-content">
-            <form class="form" action="#" onsubmit="save();return false">
+            <form class="form" name="employee" action="#" onsubmit="save(event);return false">
                 <div class="form-head">Employee Payroll Form</div>
                 <div class="row-content">
                     <label class="label text" for="name">Name</label>
                     <input class="input" type="text" id="name" name="name" placeholder="Your name.." required>
+                    <error-output class="text-error" for="text"></error-output>
                 </div>
                 <div class="row-content">
                     <label class="label text" for="profile">Profile Image</label>
@@ -49,24 +51,24 @@
                 <div class="row-content">
                     <label class="label text" for="gender">Gender</label>
                     <div>
-                        <input type="radio" id="male" name="gender" value="male">
+                        <input type="radio" id="male" name="gender" value="male" required>
                         <label class="text" for="male">Male</label>
-                        <input type="radio" id="female" name="gender" value="female">
+                        <input type="radio" id="female" name="gender" value="female" required>
                         <label class="text" for="female">Female</label>
                     </div>
                 </div>
                 <div class="row-content">
                     <label class="label text" for="department">Department</label>
                     <div>
-                        <input class="checkbox" type="checkbox" id="hr" name="hr" value="HR">
+                        <input class="checkbox" type="checkbox" id="hr" name="department" value="HR">
                         <label class="text" for="hr">HR</label>
-                        <input class="checkbox" type="checkbox" id="sales" name="sales" value="Sales">
+                        <input class="checkbox" type="checkbox" id="sales" name="department" value="Sales">
                         <label class="text" for="sales">Sales</label>
-                        <input class="checkbox" type="checkbox" id="finance" name="finance" value="Finance">
+                        <input class="checkbox" type="checkbox" id="finance" name="department" value="Finance">
                         <label class="text" for="finance">Finance</label>
-                        <input class="checkbox" type="checkbox" id="engineer" name="engineer" value="Engineer">
+                        <input class="checkbox" type="checkbox" id="engineer" name="department" value="Engineer" >
                         <label class="text" for="engineer">Engineer</label>
-                        <input class="checkbox" type="checkbox" id="others" name="others" value="Others">
+                        <input class="checkbox" type="checkbox" id="others" name="department" value="Others">
                         <label class="text" for="others">Others</label>
                     </div>
                 </div>
@@ -78,7 +80,7 @@
                 <div class="row-content">
                     <label class="label text" for="startDate">Start Date</label>
                     <div>
-                        <select id="day" name="Day">
+                        <select id="day" name="Day" required>
                             <option value="" disabled selected hidden>Day</option>
                             <option value="1">1</option>
                             <option value="2">2</option>
@@ -112,22 +114,22 @@
                             <option value="30">30</option>
                             <option value="31">31</option>
                         </select>
-                        <select id="month" name="Month">
+                        <select id="month" name="Month" required>
                             <option value="" disabled selected hidden>Month</option>
-                            <option value="Jan">January</option>
-                            <option value="Feb">Febraury</option>
-                            <option value="March">March</option>
-                            <option value="April">April</option>
-                            <option value="May">May</option>
-                            <option value="June">June</option>
-                            <option value="July">July</option>
-                            <option value="Aug">August</option>
-                            <option value="Sept">September</option>
-                            <option value="Oct">October</option>
-                            <option value="Nov">November</option>
-                            <option value="Dec">December</option>
+                            <option value="1">January</option>
+                            <option value="2">Febraury</option>
+                            <option value="3">March</option>
+                            <option value="4">April</option>
+                            <option value="5">May</option>
+                            <option value="6">June</option>
+                            <option value="7">July</option>
+                            <option value="8">August</option>
+                            <option value="9">September</option>
+                            <option value="10">October</option>
+                            <option value="11">November</option>
+                            <option value="12">December</option>
                         </select>
-                        <select id="year" name="Year">
+                        <select id="year" name="Year" required>
                             <option value="" disabled selected hidden>Year</option>
                             <option value="2021">2021</option>
                             <option value="2020">2020</option>
@@ -138,6 +140,7 @@
                             <option value="2015">2015</option>
                         </select>
                     </div>
+                    <error-output class="date-error" for="text"></error-output>
                 </div>
                 <div class="row-content">
                     <label class="label text" for="notes">Notes</label>
