--- a/pages/AddEmployee.html
+++ b/pages/AddEmployee.html
@@ -79,7 +79,7 @@
                 </div>
                 <div class="row-content">
                     <label class="label text" for="startDate">Start Date</label>
-                    <div>
+                    <div id="startDate">
                         <select id="day" name="Day" required>
                             <option value="" disabled selected hidden>Day</option>
                             <option value="1">1</option>
