--- a/pages/AddEmployee.html
+++ b/pages/AddEmployee.html
@@ -20,7 +20,7 @@
             </div>
         </header>
         <div class="form-content">
-            <form class="form" name="employee" action="#" onsubmit="save(event);return false">
+            <form class="form" name="employee" action="#" onreset="resetForm()" onsubmit="save()">
                 <div class="form-head">Employee Payroll Form</div>
                 <div class="row-content">
                     <label class="label text" for="name">Name</label>
@@ -80,7 +80,7 @@
                 <div class="row-content">
                     <label class="label text" for="startDate">Start Date</label>
                     <div id="startDate">
-                        <select id="day" name="Day" required>
+                        <select id="day" name="Day">
                             <option value="" disabled selected hidden>Day</option>
                             <option value="1">1</option>
                             <option value="2">2</option>
@@ -114,22 +114,22 @@
                             <option value="30">30</option>
                             <option value="31">31</option>
                         </select>
-                        <select id="month" name="Month" required>
+                        <select id="month" name="Month">
                             <option value="" disabled selected hidden>Month</option>
-                            <option value="1">January</option>
-                            <option value="2">Febraury</option>
-                            <option value="3">March</option>
-                            <option value="4">April</option>
-                            <option value="5">May</option>
-                            <option value="6">June</option>
-                            <option value="7">July</option>
-                            <option value="8">August</option>
-                            <option value="9">September</option>
-                            <option value="10">October</option>
-                            <option value="11">November</option>
-                            <option value="12">December</option>
+                            <option value="Jan">January</option>
+                            <option value="Feb">Febraury</option>
+                            <option value="March">March</option>
+                            <option value="April">April</option>
+                            <option value="May">May</option>
+                            <option value="June">June</option>
+                            <option value="July">July</option>
+                            <option value="Aug">August</option>
+                            <option value="Sept">September</option>
+                            <option value="Oct">October</option>
+                            <option value="Nov">November</option>
+                            <option value="Dec">December</option>
                         </select>
-                        <select id="year" name="Year" required>
+                        <select id="year" name="Year">
                             <option value="" disabled selected hidden>Year</option>
                             <option value="2021">2021</option>
                             <option value="2020">2020</option>
@@ -144,7 +144,7 @@
                 </div>
                 <div class="row-content">
                     <label class="label text" for="notes">Notes</label>
-                    <textarea id="notes" class="input" name="notes" placeholder="" style="height:100px"></textarea>
+                    <textarea id="notes" class="input" name="notes" placeholder="notes.." style="height:100px"></textarea>
                 </div>
                 <div class="buttonParent">
                     <a href="./home.html" class="resetButton button cancelButton">Cancel</a>
