--- a/pages/AddEmployee.html
+++ b/pages/AddEmployee.html
@@ -20,7 +20,7 @@
             </div>
         </header>
         <div class="form-content">
-            <form class="form" name="employee" action="#" onsubmit="save(event);return false">
+            <form class="form" name="employee" action="#" onsubmit="save();return false">
                 <div class="form-head">Employee Payroll Form</div>
                 <div class="row-content">
                     <label class="label text" for="name">Name</label>
@@ -116,18 +116,18 @@
                         </select>
                         <select id="month" name="Month" required>
                             <option value="" disabled selected hidden>Month</option>
-                            <option value="1">January</option>
-                            <option value="2">Febraury</option>
-                            <option value="3">March</option>
-                            <option value="4">April</option>
-                            <option value="5">May</option>
-                            <option value="6">June</option>
-                            <option value="7">July</option>
-                            <option value="8">August</option>
-                            <option value="9">September</option>
-                            <option value="10">October</option>
-                            <option value="11">November</option>
-                            <option value="12">December</option>
+                            <option value="Jan">January</option>
+                            <option value="Feb">Febraury</option>
+                            <option value="March">March</option>
+                            <option value="April">April</option>
+                            <option value="May">May</option>
+                            <option value="June">June</option>
+                            <option value="July">July</option>
+                            <option value="Aug">August</option>
+                            <option value="Sept">September</option>
+                            <option value="Oct">October</option>
+                            <option value="Nov">November</option>
+                            <option value="Dec">December</option>
                         </select>
                         <select id="year" name="Year" required>
                             <option value="" disabled selected hidden>Year</option>
