--- a/pages/AddEmployee.html
+++ b/pages/AddEmployee.html
@@ -20,7 +20,7 @@
             </div>
         </header>
         <div class="form-content">
-            <form class="form" name="employee" action="#" onreset="resetForm()" onsubmit="save()">
+            <form class="form" name="employee" action="#" onsubmit="save();return false">
                 <div class="form-head">Employee Payroll Form</div>
                 <div class="row-content">
                     <label class="label text" for="name">Name</label>
