[Harshitha] Added-> display Employee Details in Tabular Format using Template Literals

--- a/pages/Home.html
+++ b/pages/Home.html
@@ -28,10 +28,11 @@
                 <a href="../pages/AddEmployee.html" class="add-button">
                 <img src="../assets/icons/add-24px.svg" alt="">Add User</a>
             </div> <!--header-content-->
-            <table id="display" class="table">
-            </table>
-        </div>   
-        <script defer src="../js/Home.js"></script>
-        <script defer src="../js/EmpPayrollData.js"></script>
+            <div class="table-main">
+                <table id="display" class="table">
+                </table>
+            </div>
+        </div>  
+        <script src="../js/Home.js"></script> 
     </body>
 </html>
