[Harshitha] Added-> On clicking the delete icon the data gets deleted

--- a/pages/Home.html
+++ b/pages/Home.html
@@ -34,5 +34,6 @@
             </div>
         </div>  
         <script src="../js/Home.js"></script> 
+        <!--<script src="../js/Form.js"></script>-->
     </body>
 </html>
