--- a/pages/AddEmployee.html
+++ b/pages/AddEmployee.html
@@ -6,6 +6,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap" rel="stylesheet">
         <link href="../css/Form.css" rel="stylesheet">
         <script defer src="../js/EmpPayrollData.js"></script>
+        <script defer src="../js/utility.js"></script>
         <script defer src="../js/Form.js"></script>
         <title>Employee Payroll Form</title>
     </head>
@@ -20,7 +21,7 @@
             </div>
         </header>
         <div class="form-content">
-            <form class="form" name="employee" action="#" onreset="resetForm()" onsubmit="save()">
+            <form class="form" name="employee" action="#" onreset="resetForm()" onsubmit="save(event)">
                 <div class="form-head">Employee Payroll Form</div>
                 <div class="row-content">
                     <label class="label text" for="name">Name</label>
